--- a/starwars/src/App.css
+++ b/starwars/src/App.css
@@ -1,8 +1,16 @@
 .App {
   text-align: center;
+  height: 100vh;
+  background-image: url("./sw-bg.jpg");
+  background-size: cover;
 }
 .Header {
   color: #443e3e;
   text-shadow: 1px 1px 5px #fff;
+
+}
+
+.GridMod {
+  background: rgba(241, 241, 241, 0.5);
 }
 /* write your parent styles in here for your App.js */
