--- a/starwars/src/App.css
+++ b/starwars/src/App.css
@@ -1,16 +1,24 @@
 .App {
   text-align: center;
+}
+
+.headerImgDiv {
+  position: absolute;
   height: 100vh;
+  width: 100vw;
   background-image: url("./sw-bg.jpg");
-  background-size: cover;
-}
-.Header {
-  color: #443e3e;
-  text-shadow: 1px 1px 5px #fff;
+  top: 0;
+  left: 0;
 
 }
+.content {
+  background: rgb(241, 241, 241);
+  position: relative;
+  margin-top: 200px;
+  top: 25%;
+}
 
-.GridMod {
-  background: rgba(241, 241, 241, 0.5);
+.ui.grid {
+  margin: 200px 0 0 30px!important;
 }
 /* write your parent styles in here for your App.js */
