made some changes to the background img styling

--- a/starwars/src/App.css
+++ b/starwars/src/App.css
@@ -3,22 +3,21 @@
 }
 
 .headerImgDiv {
-  position: absolute;
+  position: fixed;
   height: 100vh;
   width: 100vw;
   background-image: url("./sw-bg.jpg");
   top: 0;
   left: 0;
+  background-repeat: no-repeat;
+  background-size: cover;
 
 }
 .content {
-  background: rgb(241, 241, 241);
-  position: relative;
-  margin-top: 200px;
-  top: 25%;
+  background: rgb(218, 218, 218)!important;
 }
 
 .ui.grid {
-  margin: 200px 0 0 30px!important;
+  margin: 200px 0 auto 150px!important;
 }
 /* write your parent styles in here for your App.js */
